--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>leyou-gateway</module>
         <module>leyou-item</module>
         <module>leyou-common</module>
+        <module>leyou-upload</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -36,7 +37,7 @@
         <mysql.version>5.1.32</mysql.version>
         <pageHelper.starter.version>1.2.3</pageHelper.starter.version>
         <leyou.latest.version>1.0.0-SNAPSHOT</leyou.latest.version>
-        <fastDFS.client.version>1.26.2-RELEASE</fastDFS.client.version>
+        <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
     </properties>
 
     <dependencyManagement>
@@ -75,11 +76,13 @@
                 <version>${mysql.version}</version>
             </dependency>
             <!--FastDFS客户端-->
+            <!-- https://mvnrepository.com/artifact/com.github.tobato/fastdfs-client -->
             <dependency>
                 <groupId>com.github.tobato</groupId>
                 <artifactId>fastdfs-client</artifactId>
                 <version>${fastDFS.client.version}</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
